--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -67,9 +67,10 @@
             <RadioGroup
                 android:id="@+id/httpMethodPanel"
                 android:layout_width="0dp"
-                android:layout_height="77dp"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="217dp">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/httpMethodText"
+                tools:layout_editor_absoluteX="1dp">
 
                 <RadioButton
                     android:id="@+id/get"
