--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -52,6 +52,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:entries="@array/languages"
                 app:layout_constraintTop_toBottomOf="@+id/languageText"
                 tools:layout_editor_absoluteX="0dp" />
 
